Bouton Retour Home

--- a/src/page.html
+++ b/src/page.html
@@ -73,6 +73,14 @@
         <option>5000</option>
     </select>      
 </p>
+
+<p>Lien Retour niveau supérieur :
+    <select id="retourHome">
+        <option selected="selected">Non</option>
+        <option>Oui</option>
+    </select>      
+</p>
+
 </fieldset>
 
 <p class="textCentre"><button id="generateBtn" onclick="genererDiaporama()" disabled="disabled">Générer Diaporama...</button> - 
