--- a/src/retaillage/page.html
+++ b/src/retaillage/page.html
@@ -17,21 +17,23 @@
     <button onclick="choisirImage()" >Choisir Image...</button> <span id="image"></span></p>
 
 <p><label>Taille maximum :</label> <input id="taille" type="number"
-value="1024" /></p>
+value="2048" /></p>
 
 
 <p><label>Rapport proportionnel :</label>
     <select id="rapport">
-        <option>Hauteur ou Largeur</option>
+        <option selected="selected">Hauteur ou Largeur</option>
         <option>Hauteur</option>
         <option>Largeur</option>
     </select>   
 </p>
 
-<p><label>Remplacement de l'image :</label>
-    <select id="remplacement">
-        <option selected="selected">Non</option>
-        <option>Oui</option>
+<p><label>Qualité :</label>
+    <select id="quality">
+        <option selected="selected">65</option>
+        <option>70</option>
+        <option>80</option>
+        <option>90</option>
     </select>
 </p>
 
