--- a/src/retaillage/page.html
+++ b/src/retaillage/page.html
@@ -11,7 +11,7 @@
  
 <body>
  
-<h2>BoDiapo</h2> 
+<h2>BoDiapo - Retaillage d'image</h2> 
 
 <p><label>Choix de l'image à retailler :</label>
     <button onclick="choisirImage()" >Choisir Image...</button> <span id="image"></span></p>
@@ -30,8 +30,9 @@ value="2048" /></p>
 
 <p><label>Qualité :</label>
     <select id="quality">
-        <option selected="selected">65</option>
+        <option>65</option>
         <option>70</option>
+        <option selected="selected">75</option>
         <option>80</option>
         <option>90</option>
     </select>
