Affichage du panel

--- a/src/retaillage/page.html
+++ b/src/retaillage/page.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="<chemin/>/page.css" rel="stylesheet" />
-    <title>BoNote</title>
+    <title>BoDiapo - Retaillage</title>
 </head>
  
 <body>
