Retouche de la Page : OK

--- a/src/retouchePage/page.html
+++ b/src/retouchePage/page.html
@@ -16,7 +16,11 @@
 <insertion/>
 
 <div class="validation">
-    <button onclick="valider()">Valider les modifications</button>
+    <p>
+        <button onclick="valider()" id="btnValidation" disabled="disabled">Valider les modifications</button>
+    </p><p>
+        <button id="visuResultat" onclick="visuResultat()">Voir le résultat...</button>
+    </p>
 </div>
 
 <script type="text/javascript" src="<chemin/>/pageInterface.js"></script>
