--- a/src/ajoutImages/page.html
+++ b/src/ajoutImages/page.html
@@ -23,8 +23,10 @@
 
 </fieldset>
 
-<p class="textCentre"><button id="generateBtn" onclick="genererDiaporama()" disabled="disabled">Générer Diaporama...</button> - 
-<button id="visuResultat" onclick="visuResultat()" disabled="disabled">Voir le résultat...</button></p>
+<p class="textCentre"><button id="generateBtn" onclick="genererDiaporama()" disabled="disabled">Compléter le Diaporama...</button> - 
+<button id="visuResultat" onclick="visuResultat()">Voir le résultat...</button></p>
+
+<p class="textCentre"><button id="retourMenu" onclick="retourMenu()">Retour Menu...</button></p>
 
 <script type="text/javascript" src="<chemin/>/pageInterface.js"></script>
 
