--- a/src/generationDiapo/page.html
+++ b/src/generationDiapo/page.html
@@ -83,8 +83,10 @@
 
 </fieldset>
 
-<p class="textCentre"><button id="generateBtn" onclick="genererDiaporama()" disabled="disabled">Générer Diaporama...</button> - 
+<p class="textCentre"><button id="generateBtn" onclick="genererDiaporama()" disabled="disabled">Générer le Diaporama...</button> - 
 <button id="visuResultat" onclick="visuResultat()" disabled="disabled">Voir le résultat...</button></p>
+
+<retourBouton/>
 
 <script type="text/javascript" src="<chemin/>/pageInterface.js"></script>
 
