--- a/src/retouchePage/page.html
+++ b/src/retouchePage/page.html
@@ -21,6 +21,7 @@
     </p><p>
         <button id="visuResultat" onclick="visuResultat()">Voir le résultat...</button>
     </p>
+    <p><button id="retourMenu" onclick="retourMenu()">Retour Menu...</button></p>
 </div>
 
 <script type="text/javascript" src="<chemin/>/pageInterface.js"></script>
